Let's try to fix the windows height problem
Cleanup scrollbar appearance on desktop view. Larger views not checked yet.

--- a/visu.css
+++ b/visu.css
@@ -344,6 +344,11 @@
 }
 
 @media (min-width: 1025px) {
+    .ui-content {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+    }
     .content-primary {
         top: 65px;
     }
